fixed destination page on mobile + little css refactor

--- a/starter-code/style.scss
+++ b/starter-code/style.scss
@@ -64,10 +64,17 @@ Composant ?
     font-weight: 400;
     text-transform: uppercase;
     letter-spacing: .256em;
+    font-size: 1rem;
     span {
         font-weight: 700;
         color:hsla(0, 0%, 100%, 0.256);
         margin-right: .75em;
+    }
+}
+
+@media screen and (min-width: 890px) {
+    .numbered-title {
+        font-size: 1.7rem;
     }
 }
 
@@ -157,6 +164,7 @@ body {
                     font-family: 'Bellefair';
                     color: hsl(0 0% 100%);
                     font-size: 5em;
+                    font-weight: 400;
                 }
             }
             p {
@@ -206,19 +214,6 @@ body {
     background-image: url("./assets/destination/background-destination-mobile.jpg");
 
     .main-container--destination {
-        h2 {
-            grid-row: 1;
-            strong {
-                font-weight: 700;
-                margin-right: .7em;
-                color:hsl(0 0% 100% / .25)
-            }
-            justify-self: center;
-            text-transform: uppercase;
-            font-weight: 100;
-            letter-spacing: .2em;
-            font-size: 1.7rem;
-        }
 
         .destination-img-wrapper {
             grid-column: 1;
@@ -244,6 +239,7 @@ body {
             justify-self: center;
             display: flex;
             list-style: none;
+            gap: 1rem;
             button {
                 position: relative;
                 font-size: 1.256rem;
@@ -254,7 +250,6 @@ body {
                 border: none;
                 background-color: transparent;
                 padding: 1em 0;
-                margin-right: 1.75em;
                 cursor: pointer;
                 &.active::after {
                     content: "";
@@ -273,7 +268,7 @@ body {
             grid-column: 1;
             visibility: hidden;
             text-align: center;
-            padding: 0 3rem;
+            padding: 0 .75rem;
 
             &.active {
                 visibility: visible;
@@ -281,9 +276,10 @@ body {
             
 
             h1 {
-                margin-top: -.3em;
+                margin-top: .3em;
                 text-transform: uppercase;
-                font-size: 5.5rem;
+                font-size: 4rem;
+                font-weight: 400;
             }
 
             p {
@@ -327,19 +323,6 @@ body {
                     "nav"
                     "article";
         justify-items: center;
-
-        h2 {
-            grid-area: title;
-            strong {
-                font-weight: 700;
-                margin-right: .6em;
-                color:hsl(0 0% 100% / .25);
-            }
-            text-transform: uppercase;
-            font-weight: 100;
-            letter-spacing: .256em;
-            font-size: 1rem;
-        }
 
         .crew-image {
             grid-area: image;
@@ -614,13 +597,9 @@ body {
             align-items: start;
 
             h2 {
-                strong {
-                    margin-right: 1.2em;
-                }
                 grid-row: 1;
                 grid-column: 2;
                 justify-self: start;
-                // margin-top: 3rem;
             }
 
             .nav-destinations {
@@ -663,6 +642,7 @@ body {
             justify-items: start;
 
             h2 {
+                grid-area: title;
                 letter-spacing: .2em;
                 font-size: 1.7rem;
             }
